fix alignment of badges in drawer
this lines up badges in the network section with ones in the
communities section

--- a/src/routes/PrimaryLayout/components/Drawer/Drawer.scss
+++ b/src/routes/PrimaryLayout/components/Drawer/Drawer.scss
@@ -112,6 +112,10 @@ $new-community-spacing: 16px;
   }
 }
 
+.networkList li {
+  padding-right: 0;
+}
+
 .networkCommunitiesList {
   margin: $ul-vertical-spacing 0 0 $ul-horizontal-spacing;
 
